write basic regression tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,13 +59,15 @@ dependencies = ["coverage[toml]>=6.5", "pytest", "hypothesis", "pytest-asyncio"]
 [tool.pytest.ini_options]
 markers = [
   "mock_compatibility: Testing that session mock (still) behaves like hpk server",
+  "regression: Regression tests",
 ]
 
 
 [tool.hatch.envs.test.scripts]
-test = "pytest {args:tests} -m 'not mock_compatibility'"
-test-cov = "coverage run -m pytest {args:tests} -m 'not mock_compatibility'"
+test = "pytest {args:tests} -m 'not mock_compatibility and not regression'"
+test-cov = "coverage run -m pytest {args:tests} -m 'not mock_compatibility and not regression'"
 mock_compatibility = "pytest {args:tests} -m mock_compatibility"
+regression = "pytest {args:tests} -m regression"
 cov-report = [
   "- coverage combine",
   "coverage report",
